# Nsys-Viewer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/nsys_viewer/: cli.py  db.py  server.py
src/nsys_viewer/web/: app.js  index.html  style.css
